Styled call to action button in Hero component and fixed line break in the h2 from being in the wrong spot.

--- a/src/Hero.css
+++ b/src/Hero.css
@@ -3,3 +3,16 @@ h2 {
   margin-left: 140px;
   margin-right: 140px;
 }
+
+button {
+  background-color: hsl(180, 66%, 49%);
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 35px;
+  padding-right: 35px;
+  border: none;
+  border-radius: 30px;
+  color: #fff;
+  margin-left: 140px;
+  font-size: 18px;
+}
