--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -34,6 +34,6 @@
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
-  border-radius: 20px;
+  border-radius: 30px;
   color: #fff;
 }
